Fix uri escape during renaming

--- a/weed/server/filer_ui/filer.html
+++ b/weed/server/filer_ui/filer.html
@@ -337,7 +337,7 @@
         }
         var url = basePath + encodeURIComponent(newName);
         var originPath = basePath + originName;
-        url += '?mv.from=' + originPath;
+        url += '?mv.from=' + encodeURIComponent(originPath);
         var xhr = new XMLHttpRequest();
         xhr.open('POST', url, false);
         xhr.setRequestHeader('Content-Type', '');
