--- a/weed/server/filer_ui/filer.html
+++ b/weed/server/filer_ui/filer.html
@@ -116,13 +116,14 @@
             {{ else }}
             <table width="100%" class="table table-hover">
                 {{ $path := .Path }}
+                {{ $limit := .Limit }}
                 {{ $showDirDel := .ShowDirectoryDelete }}
                 {{ range $entry_index, $entry := .Entries }}
                 <tr>
                     <td>
                         {{ if $entry.IsDirectory }}
                         <span class="glyphicon glyphicon-folder-open" aria-hidden="true"></span>&nbsp;
-                        <a href="{{ printpath $path  "/" $entry.Name "/"}}" >
+                        <a href="{{ printpath $path  "/" $entry.Name "/" "?" "limit" "=" }}{{ print $limit }}" >
                         {{ $entry.Name }}
                         </a>
                         {{ else }}
